--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     overflow-x: hidden;
 }
+
+/* cabeça */
+
 header{
     background-color: rgba(0, 0, 0, 0.836);
     height: 100px;
@@ -67,28 +70,29 @@ ul>a:hover{
     box-shadow: 1px 2px 4px lightblue;
 }
 
-/* main */
+/* apresentacao */
 
-article{
-    background-color: black;
+.apresentacao{
+    background: linear-gradient( #000000, #131212, #131313);
+
     color: white;
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100vw;
-    height: 60vh;
+    height: 100vh;
 }
 #imagem{
     width: 350px;
     height: 350px;
     border-radius: 50%;
-    margin-top: 30%;
+    margin-top: -20%;
 }
 
 .sec_texto{
     margin-bottom: 90px;
-    margin-right: 90px;
-    margin-top: 15%;
+    margin-right: 110px;
+    margin-top: 4%;
 }
 .sec_texto>h1{
     font-size: 38px;
@@ -98,3 +102,26 @@ article{
     height: 30px;
 }
 
+iframe{
+    width: 300px;
+    height: 450px;
+    border: 2px solid black;
+    background-color: rgb(255, 255, 255);
+}
+
+
+/* projetos */
+.projetos{
+    background: linear-gradient( #000000, #1f1e1e);
+    height: 100vh;
+}
+
+#projetos{
+    text-align: center;
+    color: white;
+    font-size: 3em;
+}
+
+.container_projetos{
+    margin-top: 50px;
+}
